--- a/view/clima-marea.html
+++ b/view/clima-marea.html
@@ -55,63 +55,172 @@
         </ul>
         </div>
     </nav>
+    <div class="widgets" style="display: flex; align-content: center; padding-right: 65px;">
+        <!--Widget de Temperatura-->
+        <div id="ww_8f4cc25f54a43" v='1.3' loc='auto' a='{"t":"horizontal","lang":"es","ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://sharpweather.com/es/widgets/" id="ww_8f4cc25f54a43_u" target="_blank">Widget de tiempo para el sitio web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_8f4cc25f54a43"></script>
+        <!--Widget de la luna-->
+        <div id="contain_moon" style="display: block; padding-left: 35px; text-align:center;padding-top:5px;padding-bottom:5px;">
+            <div style="font-weight:bold">La Luna hoy</div>
+                <div loc='auto' style="margin-top:7px;margin-bottom:15px;filter:drop-shadow(0 0 30px hsl(220,100%,15%))">
+                </div>
+                <div>
+                    .
+                </div>
+                <div style="font-size:small">
+                    Aquí
+                </div>
+            </div>
+        <script>
+            (function(){var d=new Date().getDate();var m=document.querySelectorAll("#contain_moon div");var a=new XMLHttpRequest();var url="https://www.icalendar37.net/lunar/api/?lang=es&month="+(new Date().getMonth()+1)+"&year="+(new Date().getFullYear())+"&size=100&lightColor=rgb(245,245,245)&shadeColor=rgb(17,17,17)&LDZ="+new Date(new Date().getFullYear(),new Date().getMonth(),1)/1000+"";m[1].style.height="100px";a.onreadystatechange=function(){if(a.readyState==4&&a.status==200){var b=JSON.parse(a.responseText);m[1].innerHTML=b.phase[d].svg;if(typeof moon_widget_loaded=="function")moon_widget_loaded(b);m[2].innerHTML=b.phase[d].npWidget;m[3].innerHTML="Próxima luna llena<br>"+b.nextFullMoon}};a.open("GET",url,true);a.send()})()
+        </script>
+    </div>
     
-<!--------------------------MI Seccion del CLIMA---------------------------->
+<!-- SECCION CLIMA - CALENDARIOS ================================-->
+    <!--Collapse temperatura-->
     <section>
-        <div class="conteiner_clima">
-            <p>
-                Mareas
-            </p>
-            <br>
-            <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
-                Enlace informativo de mareas
-            </a>
+        <p>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseTemperatura" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Temperatura
+            </a>    
+        </p>
+        <div class="collapse" id="collapseTemperatura">
+            <div class="card card-body">
+                <div id="TTPW_gsYL">El tiempo - Tutiempo.net</div>
+            <script type="text/javascript">
+            function IniciarCargaTiempoIP()
+            {
+            var ScriptOriginal = "https://www.tutiempo.net/s-widget/pw/fgsYL/C10/";
+            var xhttp = new XMLHttpRequest();
+                xhttp.onreadystatechange = function()
+                {
+                    if(this.readyState == 4 && this.status == 200)
+                    {
+                    var data = JSON.parse(this.responseText);
+                    var res = data.loc.split(",");
+                    var imported = document.createElement('script');
+                    if(res[0] && res[1]){imported.src = ScriptOriginal+res[0]+','+res[1];}
+                    else{imported.src = ScriptOriginal;}
+                    document.head.appendChild(imported);
+                    }
+                };
+            xhttp.open("GET","https://ipinfo.io/json",true);
+            xhttp.send();
+            }
+            IniciarCargaTiempoIP();
+            </script>
+            </div>
+            <iframe class="mapa-climatico" style="width: 100%; height: 500px;" src="https://mapa.tutiempo.net/#-37.19533;-60.83679;7">
+                MAPAClima
+            </iframe>
         </div>
     </section>
+    <!--Collapse viento-->
+    <section>
+        <p>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseViento" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Viento
+            </a>    
+        </p>
+        <div class="collapse" id="collapseViento">
+            <div class="card card-body">
+                <section style="background-color: #aaaabb">
+                    <p>Haz click en la imagen para acceder al "Mapa de vientos" y a Windguru</p>
+                    <a target="_blank" href="https://www.windguru.cz">
+                        <img src="./images/clima/mapa-viento.png" alt="mapa de marea" style="width: 100%; max-width: 850px ;">
+                    </a>
+                    <br>
+                    <h1>XSURF- Aprende a interpretar Windguru</h1>
+                    <p>Pagina enlace a explicación sobre como interpretar las estadisticas y nomenclaturas</p>
+                    <iframe src="https://xsurf.es/como-interpretar-windguru/" alt="" style="width: 100%; min-height: 500px; border: 1px #4e95e7 solid;">
+                        INSERCION DE PAGINA "XSURF"
+                    </iframe>
+                </section>
+            </div>
+        </div>
+    </section>
+    <!--Collapse marea-->
+    <section>
+        <p>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseMarea" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Marea
+            </a>    
+        </p>
+        <div class="collapse show" id="collapseMarea">
+            <div class="card card-body">
+                <section>
+                    <p>
+                        Abra la imagen para acceder al mapa de mareas.
+                    </p>
+                    <br>
+                    <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
+                        <img src="images/clima/mapa-marea.png" alt="mapa de marea" style="width: 100%; max-width: 850px ;">
+                    </a>
+                </section>
+            </div>
+        </div>
+    </section>
+    <!--Collapse Luna-->
+    <section>
+        <p>
+            <a class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseLuna" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Calendario Lunar
+            </a>   
+        </p>
+        <div class="collapse" id="collapseLuna">
+            <div class="card card-body">
+                <section>
+                    <p>Información de las fases lunares del mes</p>
+                    <div>
+                        <iframe src="https://www.tutiempo.net/s-widget/moon/000000l1s/" scrolling="no" frameborder="0" style="display:flex; width :100%; height:830px;"></iframe>
+                    </div>
+                </section>
+            </div>
+        </div>    
+    </section>
+<!--Footer-->
     <footer>
         <div class="container__footer">
             <div class="box__footer">
                 <div class="logo-footer">
-                <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
                 </div>
-                <div class="subscribe-footer">
+            <div class="subscribe-footer">
                 <div class="group-subs">
                     <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
                     autocomplete="off">
                     <input class="button--submit" value="Subscribite" type="submit">
                 </div>
-                </div>
             </div>
-            <div class="box__footer">
-                <h2>Soluciones</h2>
-                <a href="https://www.google.com">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
-            </div>
-            <div class="box__footer">
-                <h2>Compañia</h2>
-                <a href="#">Acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
-            </div>
-            <div class="box__footer">
-                <h2>Redes Sociales</h2>
-                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-            </div>
-            </div>
-            <div class="box__copyright">
-            <hr>
-            <p></b>El anzuelo</p>
-            </div>
-        </footer>
-        <!--Bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        </div>
+        <div class="box__footer">
+            <h2>Soluciones</h2>
+            <a href="https://www.google.com">App Desarrollo</a>
+            <a href="#">App Marketing</a>
+            <a href="#">IOS Desarrollo</a>
+            <a href="#">Android Desarrollo</a>
+        </div>
+        <div class="box__footer">
+            <h2>Compañia</h2>
+            <a href="#">Acerca de</a>
+            <a href="#">Trabajos</a>
+            <a href="#">Procesos</a>
+            <a href="#">Servicios</a>
+        </div>
+        <div class="box__footer">
+            <h2>Redes Sociales</h2>
+            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+        </div>
+        </div>
+        <div class="box__copyright">
+        <hr>
+        <p></b>El anzuelo</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
