--- a/view/clima.html
+++ b/view/clima.html
@@ -55,7 +55,7 @@
         </ul>
         </div>
     </nav>
-    <div class="widgets" style="display: flex;" background-image="/images/clima/climafondo.png">
+    <div class="widgets" style="display: flex; align-content: center; padding-right: 65px;">
         <!--Widget de Temperatura-->
         <div id="ww_8f4cc25f54a43" v='1.3' loc='auto' a='{"t":"horizontal","lang":"es","ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://sharpweather.com/es/widgets/" id="ww_8f4cc25f54a43_u" target="_blank">Widget de tiempo para el sitio web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_8f4cc25f54a43"></script>
         <!--Widget de la luna-->
