--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-     <!-- Logo -->
+    <!-- Logo -->
     <a href="index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
@@ -39,15 +39,15 @@
                   <div class="card-front">
                     <div class="center-wrap">
 
-                      <form class="section text-center">
+                      <form class="section text-center needs-validation" novalidate>
                         <h4 class="mb-4 pb-3">Inicio de sesion</h4>
                         <div class="form-group has-validation">
-                          <input type="email" name="logemail" class="form-style form-check-input form-control"
+                          <input type="email" name="logemail" id="validationCustom01" class="form-style form-check-input form-control"
                             placeholder="Email" id="logemail" minlength="14" maxlength="30" required>
                           <i class="input-icon bi bi-person-circle"></i>
                         </div>
                         <div class="form-group mt-2 has-validation">
-                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                          <input type="password" name="logpass" class="form-style form-check-input form-control" placeholder="Contraseña" id="validationCustom02"
                             minlength="8" maxlength="12" required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
@@ -91,6 +91,27 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+  <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (() => {
+      'use strict'
+
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      const forms = document.querySelectorAll('.needs-validation')
+
+      // Loop over them and prevent submission
+      Array.from(forms).forEach(form => {
+        form.addEventListener('submit', event => {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+  </script>
 </body>
 
 </html>
