--- a/view/registro.html
+++ b/view/registro.html
@@ -40,29 +40,41 @@
                                 <div class="card-3d-wrapper">
                                     <div class="card-front">
                                         <div class="center-wrap pt-3 pb-3">
-                                            <form class="section text-center">
+                                            <form class="section text-center needs-validation" novalidate>
                                                 <h4 class="mb-4 pb-3">Resgistrarse</h4>
                                                 <div class="form-group">
-                                                    <input type="text" name="sign-name" class="form-style form-check-input"
-                                                        placeholder="Nombre" id="sign-name" minlength="3" maxlength="60" required>
+                                                    <input type="text" name="sign-name"
+                                                        class="form-style form-check-input form-control" placeholder="Nombre"
+                                                        id="sign-name" minlength="3" maxlength="60" required>
                                                     <i class="input-icon bi-person-circle"></i>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="text" name="sign-apellido" class="form-style" placeholder="Apellido" id="sign-apellido"
-                                                    minlength="3" maxlength="60"  required>
+                                                    <input type="text" name="sign-apellido" class="form-style form-check-input form-control"
+                                                        placeholder="Apellido" id="sign-apellido" minlength="3"
+                                                        maxlength="60" required>
                                                     <i class="input-icon bi-person-circle"></i>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="email" name="sign-mail" class="form-style" placeholder="Email" id="sign-mail" minlength="10" maxlength="60" required>
+                                                    <input type="email" name="sign-mail" class="form-style form-check-input form-control"
+                                                        placeholder="Email" id="sign-mail" minlength="10" maxlength="60"
+                                                        required>
                                                     <i class="input-icon bi-envelope"></i>
+                                                    <div class="invalid-tooltip">
+                                                        ingrese un email válido.
+                                                    </div>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="password" name="sign-pass" class="form-style" placeholder="Contraseña" id="sign-pass"
-                                                        autocomplete="off" minlength="8" maxlength="12" required>
+                                                    <input type="password" name="sign-pass" class="form-style form-check-input form-control"
+                                                        placeholder="Contraseña" id="sign-pass" autocomplete="off"
+                                                        minlength="8" maxlength="12" required>
                                                     <i class="input-icon bi bi-key"></i>
+                                                    <div class="invalid-tooltip">
+                                                        Ingrese una contraseña válida.
+                                                    </div>
                                                 </div>
                                                 <a href="login-registro.html">
-                                                    <button class="mt-4 btn" type="submit"><span>Registrarse</span></button> </a>
+                                                    <button class="mt-4 btn"
+                                                        type="submit"><span>Registrarse</span></button> </a>
                                                 <p class="mb-0 mt-4 text-center"><a href="./login-registro.html"
                                                         class="link">Iniciar sesion</a></p>
                                             </form>
@@ -101,8 +113,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })()
+    </script>
 </body>
 
 </html>
 <!--  -->
-
