--- a/view/registro.html
+++ b/view/registro.html
@@ -40,22 +40,25 @@
                                 <div class="card-3d-wrapper">
                                     <div class="card-front">
                                         <div class="center-wrap pt-3 pb-3">
-                                            <form class="section text-center needs-validation" novalidate>
+                                            <form class="section text-center needs-validation"  id="formregistro" novalidate>
                                                 <h4 class="mb-4 pb-3">Resgistrarse</h4>
                                                 <div class="form-group">
                                                     <input type="text" name="sign-name"
-                                                        class="form-style form-check-input form-control" placeholder="Nombre"
-                                                        id="sign-name" minlength="3" maxlength="60" required>
+                                                        class="form-style form-check-input form-control"
+                                                        placeholder="Nombre" id="sign-name" minlength="3" maxlength="60"
+                                                        required>
                                                     <i class="input-icon bi-person-circle"></i>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="text" name="sign-apellido" class="form-style form-check-input form-control"
+                                                    <input type="text" name="sign-apellido"
+                                                        class="form-style form-check-input form-control"
                                                         placeholder="Apellido" id="sign-apellido" minlength="3"
                                                         maxlength="60" required>
                                                     <i class="input-icon bi-person-circle"></i>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="email" name="sign-mail" class="form-style form-check-input form-control"
+                                                    <input type="email" name="sign-mail"
+                                                        class="form-style form-check-input form-control"
                                                         placeholder="Email" id="sign-mail" minlength="10" maxlength="60"
                                                         required>
                                                     <i class="input-icon bi-envelope"></i>
@@ -64,7 +67,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="password" name="sign-pass" class="form-style form-check-input form-control"
+                                                    <input type="password" name="sign-pass"
+                                                        class="form-style form-check-input form-control"
                                                         placeholder="Contraseña" id="sign-pass" autocomplete="off"
                                                         minlength="8" maxlength="12" required>
                                                     <i class="input-icon bi bi-key"></i>
@@ -97,7 +101,7 @@
                 <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
             </defs>
             <g class="parallax">
-                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7") />
                 <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
                 <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
                 <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
@@ -133,7 +137,10 @@
                 }, false)
             })
         })()
+        
     </script>
+    
+
 </body>
 
 </html>
