--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -23,7 +23,10 @@
 <body>
   <header>
     <!-- Logo -->
-    <a href="index.html" class="logo">
+    <a href="../index.html"
+="../index.html"
+
+ class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
   </header>
@@ -51,7 +54,8 @@
                             minlength="8" maxlength="12" required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
-                        <a href="./index.html"><button class="btn mt-4" type="submit"><span>Ingresar</span></button></a>
+                        <a href="../index.html"
+><button class="btn mt-4" type="submit"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
                         <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
