--- a/view/registro.html
+++ b/view/registro.html
@@ -25,7 +25,10 @@
     <div class="container-login">
         <!-- Logo -->
         <header>
-            <a href="index.html" class="logo">
+            <a href="../index.html"
+="../index.html"
+
+ class="logo">
                 <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
             </a>
         </header>
