--- a/view/blog.html
+++ b/view/blog.html
@@ -52,7 +52,8 @@
 
   <!-- Header -->
   <header>
-    <a ref="index.html" class="logo">
+    <a href="../index.html"
+ class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
     </a>
     <div>
@@ -68,7 +69,9 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="../index.html"
+
+>home</a></li>
         <li><a href="clima.html">clima</a></li>
         <li><a href="calendarios.html">calendario</a></li>
         <li><a href="shop.html">e-shop</a></li>
@@ -327,7 +330,8 @@
     <div class="container__footer">
       <div class="box__footer">
         <div class="logo-footer">
-          <img src="images/identidad/El-anzuelo-logo.png" alt="">
+          <img src=view/images/
+identidad/El-anzuelo-logo.png" alt="">
         </div>
         <div class="subscribe-footer">
           <div class="group-subs">
