--- a/view/calendarios.html
+++ b/view/calendarios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -40,12 +40,15 @@
 
     <!-- Estilos Footer -->
     <link rel="stylesheet" href="./css/footer.css">
+
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <a ref="index.html" class="logo">
+        <a href="../index.html"
+
+ class="logo">
             <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
         </a>
         <div>
@@ -61,7 +64,10 @@
     <nav>
         <div id="menu">
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="../index.html"
+="../index.html"
+
+>home</a></li>
                 <li><a href="clima.html">clima</a></li>
                 <li><a href="calendarios.html">calendario</a></li>
                 <li><a href="shop.html">e-shop</a></li>
