--- a/view/clima.html
+++ b/view/clima.html
@@ -30,7 +30,10 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html" class="logo">
+        <a href="../index.html"
+="../index.html"
+
+ class="logo">
         <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
         </a>
         <div>
@@ -45,7 +48,10 @@
     <nav>
         <div id="menu">
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="../index.html"
+="../index.html"
+
+>HOME</a></li>
             <li><a href="clima.html">CLIMA</a></li>
             <li><a href="calendarios.html">CALENDARIO</a></li>
             <li><a href="shop.html">E-SHOP</a></li>
