--- a/view/contacto.html
+++ b/view/contacto.html
@@ -41,7 +41,10 @@
 
   <!-- Header -->
   <header>
-    <a href="index.html" class="logo">
+    <a href="../index.html"
+="../index.html"
+
+ class="logo">
 
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
 
@@ -59,7 +62,10 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="../index.html"
+="../index.html"
+
+>home</a></li>
         <li><a href="clima.html">clima</a></li>
         <li><a href="calendarios.html">calendario</a></li>
         <li><a href="shop.html">e-shop</a></li>
