--- a/view/payment.html
+++ b/view/payment.html
@@ -28,7 +28,9 @@
 <body>
     <!-- Header -->
     <header>
-        <a ref="index.html" class="logo">
+        <a href="../index.html"
+
+ class="logo">
             <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
         </a>
         <div>
@@ -44,7 +46,10 @@
     <nav>
         <div id="menu">
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="../index.html"
+="../index.html"
+
+>home</a></li>
                 <li><a href="clima.html">clima</a></li>
                 <li><a href="calendarios.html">calendario</a></li>
                 <li><a href="shop.html">e-shop</a></li>
@@ -120,7 +125,8 @@
                     </div>
                 </div>
 
-                <a href="./index.html">
+                <a href="../index.html"
+>
                     <button class="btn-cont"> Pagar
                         <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
