--- a/view/product.html
+++ b/view/product.html
@@ -51,7 +51,9 @@
     <body>
         <!-- Header -->
         <header>
-            <a ref="index.html" class="logo">
+            <a href="../index.html"
+
+ class="logo">
                 <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
             </a>
             <div>
@@ -67,7 +69,10 @@
         <nav>
             <div id="menu">
                 <ul>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="../index.html"
+="../index.html"
+
+>home</a></li>
                     <li><a href="clima.html">clima</a></li>
                     <li><a href="calendarios.html">calendario</a></li>
                     <li><a href="shop.html">e-shop</a></li>
