--- a/view/shop.html
+++ b/view/shop.html
@@ -55,7 +55,10 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="../index.html"
+="../index.html"
+
+>home</a></li>
         <li><a href="clima.html">clima</a></li>
         <li><a href="calendarios.html">calendario</a></li>
         <li><a href="shop.html">e-shop</a></li>
