--- a/view/clima.html
+++ b/view/clima.html
@@ -30,10 +30,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="../index.html"
-="../index.html"
-
- class="logo">
+        <a href="../index.html" class="logo">
         <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
         </a>
         <div>
