--- a/view/calendarios.html
+++ b/view/calendarios.html
@@ -46,9 +46,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="../index.html"
-
- class="logo">
+        <a href="../index.html"  class="logo">
             <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
         </a>
         <div>
@@ -64,10 +62,7 @@
     <nav>
         <div id="menu">
             <ul>
-                <li><a href="../index.html"
-="../index.html"
-
->home</a></li>
+                <li><a href="../index.html">home</a></li>
                 <li><a href="clima.html">clima</a></li>
                 <li><a href="calendarios.html">calendario</a></li>
                 <li><a href="shop.html">e-shop</a></li>
@@ -78,7 +73,7 @@
         </div>
     </nav>
 
-
+<section>
     <div class="container">
         <div class="row">
             <div class="col-md-8  col-xs-12 py-3 m-l 11">
@@ -133,7 +128,7 @@
             </div>
         </div>
     </div>
-
+</section>
 
 
 
