--- a/view/foro.html
+++ b/view/foro.html
@@ -31,10 +31,7 @@
 <body>
      <!-- Header -->
   <header>
-    <a href="../index.html"
-="../index.html"
-
- class="logo">
+    <a href="../index.html" class="logo">
 
     <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
 
