--- a/view/productos.html
+++ b/view/productos.html
@@ -37,10 +37,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="../index.html"
-="../index.html"
-
- class="logo">
+        <a href="../index.html" class="logo">
 
             <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
 
@@ -88,13 +85,12 @@
 
                             <!--Radio group-cat-->
                             <div class="form-group ">
-                                <input class="form-check-input" name="group" type="radio" id="radio-all">
+                                <input class="form-check-input" name="group" type="radio" id="radio-all" checked="">
                                 <label for="radio-all" class="form-check-label dark-grey-text" checked>Todos</label>
                             </div>
 
                             <div class="form-group">
-                                <input class="form-check-input" name="group" type="radio" id="radio-accesorios"
-                                    checked="">
+                                <input class="form-check-input" name="group" type="radio" id="radio-accesorios">
                                 <label for="radio-accesorios" class="form-check-label dark-grey-text">Accesorios</label>
                             </div>
 
