--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -23,10 +23,7 @@
 <body>
   <header>
     <!-- Logo -->
-    <a href="../index.html"
-="../index.html"
-
- class="logo">
+    <a href="../index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
   </header>
