--- a/view/shop.html
+++ b/view/shop.html
@@ -37,7 +37,7 @@
 
   <!-- Encabezado Header -->
   <header>
-    <a ref="#" class="logo">
+    <a href="../index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de la tienda">
     </a>
     <div>
@@ -55,10 +55,7 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="../index.html"
-="../index.html"
-
->home</a></li>
+        <li><a href="../index.html">home</a></li>
         <li><a href="clima.html">clima</a></li>
         <li><a href="calendarios.html">calendario</a></li>
         <li><a href="shop.html">e-shop</a></li>
@@ -216,8 +213,11 @@
 
 
 
-  <!--Bootstrap-->
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 
 </body>
 
