--- a/view/registro.html
+++ b/view/registro.html
@@ -31,7 +31,7 @@
         </header>
 
         <!-- Form -->
-        <section class="section">
+        <section class="section resgistro">
             <div class="container">
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-3">
@@ -76,9 +76,19 @@
                                                         Ingrese una contraseña válida.
                                                     </div>
                                                 </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="sign-pass2"
+                                                        class="form-style form-check-input form-control"
+                                                        placeholder="Repetir contraseña" id="sign-pass2" autocomplete="off"
+                                                        minlength="8" maxlength="12" required>
+                                                    <i class="input-icon bi bi-key"></i>
+                                                    <div class="invalid-tooltip">
+                                                        Ingrese una contraseña válida.
+                                                    </div>
+                                                </div>
                                                 <a href="login-registro.html">
-                                                    <button class="mt-4 btn"
-                                                        type="submit"><span>Registrarse</span></button> </a>
+                                                    <button id="btnRegistro" class="mt-4 btn"
+                                                        type="submit" onsubmit="click()"><span>Registrarse</span></button> </a>
                                                 <p class="mb-0 mt-4 text-center"><a href="./login-registro.html"
                                                         class="link">Iniciar sesion</a></p>
                                             </form>
@@ -117,31 +127,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (() => {
-            'use strict'
-
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            const forms = document.querySelectorAll('.needs-validation')
-
-            // Loop over them and prevent submission
-            Array.from(forms).forEach(form => {
-                form.addEventListener('submit', event => {
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    }
-
-                    form.classList.add('was-validated')
-                }, false)
-            })
-        })()
-        
-    </script>
     
-
+    
 </body>
-
 </html>
-<!--  -->
