--- a/view/productos.html
+++ b/view/productos.html
@@ -557,47 +557,80 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container__footer">
-            <div class="box__footer">
-                <div class="logo-footer">
-                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
-                </div>
-                <div class="subscribe-footer">
-                    <div class="group-subs">
-                        <input type="email" class="input subscribe-footer__input" id="Email" name="Email"
-                            placeholder="Email" autocomplete="off">
-                        <input class="button--submit" value="Subscribite" type="submit">
-                    </div>
-                </div>
+        <div class="container py-4">
+          <div class="row">
+    
+            <div class="col">
+              <img src="/view/images/identidad/El-anzuelo-icono.png" alt="">
             </div>
-            <div class="box__footer">
-                <h2>Soluciones</h2>
-                <a href="https://www.google.com">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
+    
+    
+            <div class="col-lg-3">
+              <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+                autocomplete="off">
+              <input class="button--submit" value="Subscribite" type="submit">
             </div>
-
-            <div class="box__footer">
-                <h2>Compañia</h2>
-                <a href="#">Acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
+        
+        
+            <div class="col">
+              <h2>Soluciones</h2>
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="#!" class="text-dark">App Desarrollo</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">App Marketing</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">IOS Desarrollo</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">Android Desarrollo</a>
+                </li>
+              </ul>
             </div>
-
-            <div class="box__footer">
-                <h2>Redes Sociales</h2>
-                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+        
+            <div class="col">
+              <h2>Compañia</h2>
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="#!" class="text-dark">Acerca de</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">Trabajos</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">Procesos</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-dark">Servicios</a>
+                </li>
+              </ul>
             </div>
-
-        </div>
-        <div class="box__copyright">
-            <hr>
-            <p></b>El anzuelo</p>
+        
+        
+            <div class="col">
+              <h2>Compañia</h2>
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                </li>
+              </ul>
+            </div>
+        
+            <div class="box__copyright">
+              <hr>
+              <p></b>El anzuelo</p>
+            </div>
         </div>
     </footer>
 
