--- a/view/shipping.html
+++ b/view/shipping.html
@@ -41,17 +41,39 @@
     </div>
   </header>
   <!-- NAV MENU -->
-  <nav>
-    <div id="menu">
-      <ul>
-        <li><a href="../index.html">home</a></li>
-        <li><a href="clima.html">clima</a></li>
-        <li><a href="calendarios.html">calendario</a></li>
-        <li><a href="shop.html">e-shop</a></li>
-        <li><a href="foro.html">foro</a></li>
-        <li><a href="blog.html">blog</a></li>
-        <li><a href="contacto.html">contacto</a></li>
-      </ul>
+  <nav class="navbar navbar-expand-lg bg-light ">
+    <div class="container-fluid">
+      <button class="navbar-toggler navbar navbar-light bg-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon "></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item p-2">
+            <a href="../index.html">HOME</a>
+          </li>
+          <li class="nav-item p-2">
+            <a href="view/clima.html">CLIMA</a>
+          </li>
+          <li class="nav-item p-2">
+            <a href="view/calendarios.html">CALENDARIO</a>
+          </li>
+          <li class="nav-item p-2">
+            <a href="view/shop.html">E-SHOP</a>
+          </li>
+          <li class="nav-item p-2">
+            <a href="view/foro.html">FORO</a>
+          </li>
+          <li class="nav-item py-2">
+            <a href="view/blog.html">BLOG</a>
+          </li>
+          <li class="nav-item p-2">
+            <a href="view/contacto.html">CONTACTO</a>
+          </li>
+  
+        </ul>
+      </div>
     </div>
   </nav>
 
