--- a/view/clima-marea.html
+++ b/view/clima-marea.html
@@ -42,19 +42,41 @@
         </div>
     </header>
     <!-- NAV MENU -->
-    <nav>
-        <div id="menu">
-        <ul>
-            <li><a href="../index.html" >HOME</a></li>
-            <li><a href="clima.html">CLIMA</a></li>
-            <li><a href="calendarios.html">CALENDARIO</a></li>
-            <li><a href="shop.html">E-SHOP</a></li>
-            <li><a href="foro.html">FORO</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-light ">
+        <div class="container-fluid">
+          <button class="navbar-toggler navbar navbar-light bg-light" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item p-2">
+                <a href="../index.html">HOME</a>
+              </li>
+              <li class="nav-item p-2">
+                <a href="view/clima.html">CLIMA</a>
+              </li>
+              <li class="nav-item p-2">
+                <a href="view/calendarios.html">CALENDARIO</a>
+              </li>
+              <li class="nav-item p-2">
+                <a href="view/shop.html">E-SHOP</a>
+              </li>
+              <li class="nav-item p-2">
+                <a href="view/foro.html">FORO</a>
+              </li>
+              <li class="nav-item py-2">
+                <a href="view/blog.html">BLOG</a>
+              </li>
+              <li class="nav-item p-2">
+                <a href="view/contacto.html">CONTACTO</a>
+              </li>
+      
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="widgets" style="display: flex; align-content: center; padding-right: 65px;">
         <!--Widget de Temperatura-->
         <div id="ww_8f4cc25f54a43" v='1.3' loc='auto' a='{"t":"horizontal","lang":"es","ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://sharpweather.com/es/widgets/" id="ww_8f4cc25f54a43_u" target="_blank">Widget de tiempo para el sitio web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_8f4cc25f54a43"></script>
@@ -178,47 +200,83 @@
         </div>    
     </section>
 <!--Footer-->
-    <footer>
-        <div class="container__footer">
-            <div class="box__footer">
-                <div class="logo-footer">
-                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
-                </div>
-            <div class="subscribe-footer">
-                <div class="group-subs">
-                    <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
-                    autocomplete="off">
-                    <input class="button--submit" value="Subscribite" type="submit">
-                </div>
-            </div>
+<footer>
+    <div class="container py-4">
+      <div class="row">
+
+        <div class="col">
+          <img src="/view/images/identidad/El-anzuelo-icono.png" alt="">
         </div>
-        <div class="box__footer">
-            <h2>Soluciones</h2>
-            <a href="https://www.google.com">App Desarrollo</a>
-            <a href="#">App Marketing</a>
-            <a href="#">IOS Desarrollo</a>
-            <a href="#">Android Desarrollo</a>
+
+
+        <div class="col-lg-3">
+          <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+            autocomplete="off">
+          <input class="button--submit" value="Subscribite" type="submit">
         </div>
-        <div class="box__footer">
-            <h2>Compañia</h2>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Procesos</a>
-            <a href="#">Servicios</a>
+    
+    
+        <div class="col">
+          <h2>Soluciones</h2>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-dark">App Desarrollo</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">App Marketing</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">IOS Desarrollo</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Android Desarrollo</a>
+            </li>
+          </ul>
         </div>
-        <div class="box__footer">
-            <h2>Redes Sociales</h2>
-            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+    
+        <div class="col">
+          <h2>Compañia</h2>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-dark">Acerca de</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Trabajos</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Procesos</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Servicios</a>
+            </li>
+          </ul>
         </div>
+    
+    
+        <div class="col">
+          <h2>Compañia</h2>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </li>
+          </ul>
         </div>
+    
         <div class="box__copyright">
-        <hr>
-        <p></b>El anzuelo</p>
+          <hr>
+          <p></b>El anzuelo</p>
         </div>
-    </footer>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
