--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -4,6 +4,16 @@
     padding:0;
     box-sizing: border-box;
 }
+
+
+/*Nav*/
+.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+}
+
 /* slide home */
 .home{
     width: 100vw;
@@ -14,8 +24,8 @@
 /* Sección clima y calendarios  */
     /*Reemplazo de clase de button a "btn-more" para heredar estilo*/
     body {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
+        padding-top: 0rem;
+        padding-bottom: 0rem;
         color: #5a5a5a;
         align-items: center ;
       }
