--- a/view/registro.html
+++ b/view/registro.html
@@ -17,6 +17,8 @@
     <!-- normalize -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/registro.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 
 </head>
 
@@ -41,52 +43,46 @@
                                     <div class="card-front">
                                         <div class="center-wrap pt-3 pb-3">
                                             <!-- form -->
-                                            <form class="section text-center" id="formRegistro"
-                                                novalidate>
+                                            <form class="section text-center" id="formRegistro" novalidate>
                                                 <h4 class="mb-4 pb-3">Resgistrarse</h4>
                                                 <div class="form-group form-control">
-                                                    <input type="text" name="sign-name"
-                                                        class="form-style "
+                                                    <input type="text" name="sign-name" class="form-style "
                                                         placeholder="Nombre" id="sign-name" minlength="3" maxlength="60"
                                                         required>
                                                     <i id="iconName" class="input-icon bi-person-circle"></i>
                                                     <div class="aviso"></div>
                                                 </div>
                                                 <div class="form-group  form-control mt-2">
-                                                    <input type="text" name="sign-apellido"
-                                                        class="form-style"
+                                                    <input type="text" name="sign-apellido" class="form-style"
                                                         placeholder="Apellido" id="sign-apellido" minlength="3"
                                                         maxlength="60" required>
                                                     <i class="input-icon bi-person-circle"></i>
                                                     <div class="aviso"></div>
-                                                    
+
                                                 </div>
                                                 <div class="form-group  form-control mt-2">
                                                     <input type="email" name="sign-mail" id="sign-mail"
-                                                        class="form-style"
-                                                        placeholder="Email" id="sign-mail" minlength="10" maxlength="60"
-                                                        required>
+                                                        class="form-style" placeholder="Email" id="sign-mail"
+                                                        minlength="10" maxlength="60" required>
                                                     <i class="input-icon bi-envelope"></i>
                                                     <div class="aviso"></div>
                                                 </div>
                                                 <div class="form-group  form-control mt-2">
-                                                    <input type="password" name="sign-pass"
-                                                        class="form-style"
+                                                    <input type="password" name="sign-pass" class="form-style"
                                                         placeholder="Contraseña" id="sign-pass" autocomplete="off"
                                                         minlength="8" maxlength="12" required>
                                                     <i class="input-icon bi bi-key"></i>
                                                     <div class="aviso"></div>
                                                 </div>
                                                 <div class="form-group  form-control mt-2">
-                                                    <input type="password" name="sign-pass2"
-                                                        class="form-style"
+                                                    <input type="password" name="sign-pass2" class="form-style"
                                                         placeholder="Repetir contraseña" id="sign-pass2"
                                                         autocomplete="off" minlength="8" maxlength="12" required>
                                                     <i class="input-icon bi bi-key"></i>
                                                     <div class="aviso"></div>
                                                 </div>
                                                 <a href="login-registro.html">
-                                                    <button id="btnRegistro" class="mt-4 btn" type="submit"><span>Registrarse</span></button> </a>
+                                                    <button id="btnRegistro" class="mt-4 btn" type="submit" ><span>Registrarse</span></button> </a>
                                                 <p class="mb-0 mt-4 text-center"><a href="./login-registro.html"
                                                         class="link">Iniciar sesion</a></p>
                                             </form>
@@ -125,7 +121,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-        <script src="./js/formulario-registro.js"></script>
+
+    <!-- JS de registro -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="./js/formulario-registro.js"></script> -->
+    <script src="./js/prueba.js"></script>
 
 
 </body>
