--- a/view/registro.html
+++ b/view/registro.html
@@ -124,8 +124,8 @@
 
     <!-- JS de registro -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- <script src="./js/formulario-registro.js"></script> -->
-    <script src="./js/prueba.js"></script>
+    <script src="./js/formulario-registro.js"></script>
+  
 
 
 </body>
