--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -53,7 +53,7 @@
                             placeholder="Contraseña" id="password" minlength="8" maxlength="12" required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
-                        <a href="../index.html"><button class="btn mt-4"
+                        <a href="../index.html"><button id="btn-login" class="btn mt-4"
                             type="submit"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
@@ -94,27 +94,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (() => {
-      'use strict'
-
-      // Fetch all the forms we want to apply custom Bootstrap validation styles to
-      const forms = document.querySelectorAll('.needs-validation')
-
-      // Loop over them and prevent submission
-      Array.from(forms).forEach(form => {
-        form.addEventListener('submit', event => {
-          if (!form.checkValidity()) {
-            event.preventDefault()
-            event.stopPropagation()
-          }
-
-          form.classList.add('was-validated')
-        }, false)
-      })
-    })()
-  </script>
+  <!-- JS de login -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="./js/formulario-login.js"></script>
 </body>
 
