Cambio de aviso

--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -39,8 +39,7 @@
                   <div class="card-front">
                     <div class="center-wrap">
 
-                      <form id="loginForm" class="section text-center needs-validation" novalidate
-                        onsubmit="onEnviar()">
+                      <form id="loginForm" class="section text-center needs-validation" novalidate>
                         <h4 class="mb-4 pb-3">Inicio de sesion</h4>
                         <div class="form-group">
                           <input type="email" name="logemail" id="email"
